@@ -105,6 +105,8 @@ void LyXAction::init()
 		{ LFUN_INSERT_BIBTEX, "bibtex-insert", N_("Insert bibtex"),
 		  Noop },
 		{ LFUN_BIBTEX_STYLE, "bibtex-style", "", Noop },
+		{ LFUN_BOOKMARK_GOTO, "bookmark-goto", "", ReadOnly },
+		{ LFUN_BOOKMARK_SAVE, "bookmark-save", "", ReadOnly },
 		{ LFUN_BREAKLINE, "break-line", "", Noop },
 		{ LFUN_BREAKPARAGRAPH, "break-paragraph", "", Noop },
 		{ LFUN_BREAKPARAGRAPHKEEPLAYOUT, "break-paragraph-keep-layout",
@@ -355,7 +357,6 @@ void LyXAction::init()
 		{ LFUN_RECONFIGURE, "reconfigure",
 		  N_("Reconfigure"), NoBuffer },
 		{ LFUN_REDO, "redo", N_("Redo"), Noop },
-		{ LFUN_REF_BACK, "reference-back", "", ReadOnly },
 		{ LFUN_REF_GOTO, "reference-goto", "", ReadOnly },
 		{ LFUN_REF_INSERT, "reference-insert",
 		  N_("Insert cross reference"), ReadOnly },
